# mbed-test-project

./: .gitignore  CMakeLists.txt  custom_targets.json  main.cpp  mbed_app.json
TARGET_STM32F405XG/: CMakeLists.txt  PeripheralNames.h  PeripheralPins.c  PinNames.h  cmsis_nvic.h
TARGET_STM32F405XG/TOOLCHAIN_GCC_ARM/: startup_stm32f405xx.S
